# exploration

./: .gitignore  CMakeLists.txt  TODO_BUGS  config.h.cmake  exabot.cpp  exabot.h  exploration.geany  explorer.cpp  explorer.h  global_explorer.cpp  global_explorer.h  graph.h  local_explorer.cpp  local_explorer.h  main.cpp  metric_map.cpp  metric_map.h  metric_node.cpp  metric_node_frontiers.cpp  motion_planner.cpp  motion_planner.h  motion_planner_vfh.cpp_  motion_planner_vfh.h_  occupancy_grid.cpp  occupancy_grid.h  occupancy_grid_frontiers.cpp  orloc.cpp  orloc.h  pathfinder.cpp  pathfinder.h  place.cpp  place.h  plotter.cpp  plotter.h  run_tests.rb  scoped_timer.cpp  scoped_timer.h  singleton.h  super_matrix.cpp  super_matrix.h  (+5 more)
csv/: create_maps.sh
csv/autolab-easier-complete/: map-with-trajectory.csv  metric_map.dot  topo_map.dot  topo_map.graphml  trajectory  trajectory.csv  trajectory.eps
csv/caves-to-be-analyzed/: metric_map.dot  topo_map.dot  trajectory  trajectory.csv
csv/simple-working/: metric_map.dot  topo_map.dot
gslwrap/: .gitignore  CMakeLists.txt  README  generate  vector_source.cc  vector_source.h
test/: S1R.inc  arena-mio.world  arena-mirek.world  arena.cfg  arena.world  arena1.world  arena2.world  exploration.cfg  exploration.world  hokuyo.inc  map.inc  pioneer.inc  real.cfg  run-equal.rb  sick.inc  test1.cfg  test1.world  test2.cfg  test2.world
